--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ body {
   }
 }
 
+
 .title-home {
   color: white;
 }
@@ -175,6 +176,11 @@ body {
   font-size: 1rem;
   outline: none;
   transition: border 0.2s ease-in-out;
+}
+
+.header-title{
+  display: flex;
+  align-items: center;
 }
 
 .search-bar:focus {
